[gd_scene load_steps=34 format=3 uid="uid://dfdvpel7jw50t"]

[ext_resource type="Script" path="res://Personagens/mago.gd" id="1_7admn"]
[ext_resource type="Texture2D" uid="uid://bv5m285h701fc" path="res://arte/mago_andando-Sheet.png" id="1_54iij"]
[ext_resource type="Texture2D" uid="uid://cg1kaji6a6gm7" path="res://arte/mago_ataque-Sheet.png" id="2_6oxjw"]
[ext_resource type="Texture2D" uid="uid://caahl4onu2uif" path="res://arte/mago_parado-Sheet.png" id="3_0n4hc"]
[ext_resource type="Texture2D" uid="uid://dqbf76tqr5mm5" path="res://arte/deltarune_explosion.png" id="3_o7frk"]
[ext_resource type="AudioStream" uid="uid://byhmwlomait1h" path="res://Audio/EnemyHurt.wav" id="5_ftypl"]
[ext_resource type="AudioStream" uid="uid://pddqcdn7ynuf" path="res://Audio/EXPLOSION.wav" id="7_me28f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0l0v8"]
atlas = ExtResource("2_6oxjw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qatjg"]
atlas = ExtResource("2_6oxjw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xyay"]
atlas = ExtResource("3_o7frk")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h15xg"]
atlas = ExtResource("3_o7frk")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0m1q"]
atlas = ExtResource("3_o7frk")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yor1s"]
atlas = ExtResource("3_o7frk")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyth2"]
atlas = ExtResource("3_o7frk")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3p5n2"]
atlas = ExtResource("3_o7frk")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkbbu"]
atlas = ExtResource("3_o7frk")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_akyth"]
atlas = ExtResource("3_o7frk")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sn3dy"]
atlas = ExtResource("3_o7frk")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bl2r4"]
atlas = ExtResource("3_o7frk")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nc7f4"]
atlas = ExtResource("3_o7frk")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2yd8"]
atlas = ExtResource("3_o7frk")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7eng"]
atlas = ExtResource("3_o7frk")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jg18x"]
atlas = ExtResource("3_o7frk")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_av8cs"]
atlas = ExtResource("3_o7frk")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qiw6d"]
atlas = ExtResource("3_o7frk")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fj34j"]
atlas = ExtResource("3_0n4hc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8o1um"]
atlas = ExtResource("3_0n4hc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1ayn"]
atlas = ExtResource("1_54iij")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8j6ro"]
atlas = ExtResource("1_54iij")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_3401s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0l0v8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qatjg")
}],
"loop": true,
"name": &"attack",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xyay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h15xg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0m1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yor1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyth2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3p5n2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkbbu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akyth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sn3dy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bl2r4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nc7f4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2yd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7eng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jg18x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_av8cs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qiw6d")
}],
"loop": false,
"name": &"dead",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fj34j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8o1um")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1ayn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8j6ro")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0f71i"]
radius = 9.0
height = 20.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_52bf0"]
radius = 9.0
height = 20.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n82ua"]
radius = 19.0
height = 152.0

[node name="Mago" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 9
script = ExtResource("1_7admn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_3401s")
animation = &"dead"
frame = 15
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("CapsuleShape2D_0f71i")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 6)
shape = SubResource("CapsuleShape2D_52bf0")

[node name="PlayerLocator" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerLocator"]
position = Vector2(0, 4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_n82ua")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(-1.19209e-07, 4)
scale = Vector2(12.55, 1.9)

[node name="Damage_CD" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Dead_timer" type="Timer" parent="."]
wait_time = 1.3

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ftypl")
volume_db = -10.0

[node name="Dead" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_me28f")

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="area_entered" from="PlayerLocator" to="." method="_on_player_locator_area_entered"]
[connection signal="timeout" from="Damage_CD" to="." method="_on_damage_cd_timeout"]
[connection signal="timeout" from="Dead_timer" to="." method="_on_dead_timer_timeout"]
